--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ ul, li{
 .head-line svg{
     width: 430px;
 }
+
 .menus{
     margin-top: 1em;
     display: flex;
@@ -77,6 +78,27 @@ ul, li{
     background-color: #f5f5f5;
 }
 
+.col-lg-4{
+    display: flex;
+    align-items: center;
+}
+
+.col-lg-8{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.col-lg-8 h2{
+    font-size: 25px;
+    font-weight: bold;
+}
+.col-lg-8 p{
+    font-size: 14px;
+}
+.col-lg-8:last-child{
+    font-size: 10px;
+}
+
 .news-img-size{
     max-width: 100%;
     max-height: 250px;
@@ -84,11 +106,24 @@ ul, li{
 
 .news{
     border-bottom: 2px solid #000;
+    padding: 10px 10px;
 }
 
 #input-area{
     display: none;
     /* transition: ease; */
+}
+.pagination{
+    justify-content: center;
+}
+
+.page-link{
+    background-color: #fff;
+    color: #424242;
+}
+.active{
+    color: #fff;
+    background-color: #424242;
 }
 
 @media screen and (max-width:825px) {
